Git-2-Tfs Sync. cf13634 Merged PR 9731: Fixed grid scrollbar; branch: master ***NO_CI***
git-tfs-id: [https://dev.azure.com/inatech]$/Shiptech10/Dev/Frontend;C29822

--- a/v2/shiptech/apps/shiptech/src/styles.scss
+++ b/v2/shiptech/apps/shiptech/src/styles.scss
@@ -36,3 +36,9 @@
     background-color: transparent;
 }
   
+ag-grid-angular {
+    ::-webkit-scrollbar {
+      width: 10px;
+      height: 10px;
+    }
+}
